# embedded_systems

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt
include/: aligned_malloc.h  bitmap_allocator.h  connected_components.h  convolve2d.h  find_first_set_bit.h  intrusive_list.h  lru_cache.h  modify_reg.h  my_memmove.h  packet_handler.h  placeholder.h  reverse_bits.h  ring_buffer.hpp  ring_buffer.tpp
src/: aligned_malloc.cpp  bitmap_allocator.c  connected_components.cpp  convolve2d.cpp  device_read.c  find_first_set_bit.cpp  intrusive_list.cpp  lru_cache.c  modify_reg.cpp  my_memmove.cpp  packet_handler.c  packet_handler.cpp  placeholder.cpp  reverse_bits.cpp
tests/: test_aligned_malloc.cpp  test_bitmap_allocator.cpp  test_connected_components.cpp  test_convolve2d.cpp  test_find_first_set_bit.cpp  test_intrusive_list.cpp  test_lru.c  test_modify_reg.cpp  test_my_memmove.cpp  test_packet_handler.c  test_packet_handler.cpp  test_reverse_bits.cpp  test_ring_buffer.cpp  test_runner.cpp
